--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,10 @@
           </p>
         </div>
         <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-          <a href="http://localhost:3000/map" class="hover:text-zinc-700">
+          <a href="/map" class="hover:text-zinc-700">
             Map
           </a>
-          <a href="http://localhost:3000/tags" class="hover:text-zinc-700">
+          <a href="/tags" class="hover:text-zinc-700">
             Tags
           </a>
           <a href="https://github.com/icstrouse/poptopo" target="_blank" class="hover:text-zinc-700">
