Add user_id to session

--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -1,21 +1,21 @@
 <div id="<%= dom_id tag %>">
   <p class="my-5">
-    <strong class="block font-medium mb-1">Name:</strong>
+    <strong class="font-medium mb-1">Name:</strong>
     <%= tag.name %>
   </p>
 
   <p class="my-5">
-    <strong class="block font-medium mb-1">Lat:</strong>
+    <strong class="font-medium mb-1">Lat:</strong>
     <%= tag.lat %>
   </p>
 
   <p class="my-5">
-    <strong class="block font-medium mb-1">Lng:</strong>
+    <strong class="font-medium mb-1">Lng:</strong>
     <%= tag.lng %>
   </p>
 
   <p class="my-5">
-    <strong class="block font-medium mb-1">User:</strong>
+    <strong class="font-medium mb-1">User:</strong>
     <%= tag.user_id %>
   </p>
 
