--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,8 @@
           <a href="https://github.com/icstrouse/poptopo" target="_blank" class="hover:text-zinc-700">
             GitHub
           </a>
-
+            <%= link_to "Log in", new_session_path unless authenticated? %>
+            <%= button_to "Log out", session_path, method: :delete if authenticated? %>
         </div>
       </div>
     </header>
