Updates seeds, show link from tag to map/tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for(:title) || "Poptopo" %></title>
+    <title><%= content_for(:title) || "PopTopo" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -29,7 +29,7 @@
         <div class="flex items-center gap-4">
           <a href="<%= root_path%>"><%= image_tag("logo.svg", size: "32") %></a>
           <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-            v0
+            PopTopo
           </p>
         </div>
         <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
