--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -15,6 +15,7 @@
       <%= render tag %>
       <p>
         <%= link_to "Show this tag", tag, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+        <%= link_to "See on map", "/map/tags/#{tag.id}", class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
       </p>
     <% end %>
   </div>
