--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -26,7 +26,7 @@
     <%= form.text_field :lng, class: "block shadow rounded-md border border-gray-400 outline-none focus:outline-blue-600 px-3 py-2 mt-2 w-full" %>
   </div>
 
-  <div class="my-5">
+  <div class="my-5 hidden">
     <%= form.label :user_id %>
     <%= form.text_field :user_id, class: "block shadow rounded-md border border-gray-400 outline-none focus:outline-blue-600 px-3 py-2 mt-2 w-full" %>
   </div>
